--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "url": "https://github.com/PaulGuo/eslint-config-hfe/issues"
   },
   "devDependencies": {
-    "eslint": "^1.0.0",
+    "eslint": "^2.11.1",
+    "eslint-plugin-hfe": "0.0.2",
     "tape": "^4.0.0"
+  },
+  "dependencies": {
+    "eslint-plugin-hfe": "0.0.2"
   },
   "homepage": "https://github.com/PaulGuo/eslint-config-hfe",
   "keywords": [
